# second_term

./: README.md
yasakova_a_m/: CMakeLists.txt  read.me  testlib.cpp
yasakova_a_m/20230227/: README.md
yasakova_a_m/20230227/rational/: CMakeLists.txt
yasakova_a_m/20230227/rational/prj.lab/rational/include/: CMakeLists.txt  rational.cpp
yasakova_a_m/20230227/rational/prj.lab/rational/include/rational/: rational.h
yasakova_a_m/20230227/rational/prj.test/: CMakeLists.txt
yasakova_a_m/ArrayDlib/: CMakeLists.txt  arrayDlib.cpp  arrayDlib.h
yasakova_a_m/Rationallibrary/: CMakeLists.txt  rational.cpp  rational.h
yasakova_a_m/prj.cw/: CMakeLists.txt  Doxyfile
yasakova_a_m/prj.cw/ctikz/: CMakeLists.txt  ctikz.cpp
yasakova_a_m/prj.cw/ctikz/include/ctikz/: ctikz.hpp
yasakova_a_m/prj.cw/filter/: CMakeLists.txt
yasakova_a_m/prj.cw/filter/include/filter/: filter.hpp
yasakova_a_m/prj.cw/filter/src/: filter.cpp
yasakova_a_m/prj.cw/prj.test/: CMakeLists.txt  test.cpp
yasakova_a_m/prj.lab/: CMakeLists.txt
yasakova_a_m/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
yasakova_a_m/prj.lab/arrayd/include/arrayd/: arrayd.h  arrayd.hpp
yasakova_a_m/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
yasakova_a_m/prj.lab/arrayt/include/arrayt/: arrayt.h  arrayt.hpp
yasakova_a_m/prj.lab/matrixs/: matrixs.cpp
yasakova_a_m/prj.lab/matrixs/include/matrixs/: matrixs.hpp
yasakova_a_m/prj.lab/orto/: orto.cpp  orto.txt
yasakova_a_m/prj.lab/rational/: CMakeLists.txt  rational.cpp
yasakova_a_m/prj.lab/rational/include/rational/: rational.h  rational.hpp
yasakova_a_m/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp
yasakova_a_m/rationallib/: .build.bat  CMakeLists.txt
yasakova_a_m/rationallib/prj.lab/: CMakeLists.txt
yasakova_a_m/rationallib/prj.lab/rational/: CMakeLists.txt  rational.cpp
yasakova_a_m/rationallib/prj.lab/rational/include/rational/: rational.h
yasakova_a_m/rationallib/prj.test/: CMakeLists.txt  rational_test.cpp
